Fixa posição da barra de botões

--- a/ui/projects/madoc-extras/src/lib/madoc-extras-toolbar/madoc-extras-toolbar.component.html
+++ b/ui/projects/madoc-extras/src/lib/madoc-extras-toolbar/madoc-extras-toolbar.component.html
@@ -1,3 +1,4 @@
+<div class="toolbar-border">
 <nav class="navbar navbar-default" style="margin-bottom: 0; padding: 10px;">
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group" role="group">
@@ -8,3 +9,4 @@
     </div>
   </div>
 </nav>
+</div>
