--- a/ui/src/app/catalogo/modelos/listar-modelos.component.html
+++ b/ui/src/app/catalogo/modelos/listar-modelos.component.html
@@ -40,7 +40,7 @@
                 >
                     <thead>
                         <tr role="row">
-                            <th>Categoria</th>
+                            <th style="width: 20%;">Categoria</th>
                             <th>Modelo</th>
                         </tr>
                     </thead>
