--- a/ui/src/app/catalogo/modelos/listar-modelos.component.html
+++ b/ui/src/app/catalogo/modelos/listar-modelos.component.html
@@ -40,7 +40,7 @@
                 >
                     <thead>
                         <tr role="row">
-                            <th style="width: 20%;">Categoria</th>
+                            <th style="width: 20%;" class="hidden-xs">Categoria</th>
                             <th>Modelo</th>
                         </tr>
                     </thead>
@@ -56,7 +56,7 @@
                             (click)="selectModel(m)"
                             (dblclick)="selectModel(m)"
                         >
-                            <td style="vertical-align: top;">
+                            <td style="vertical-align: top;" class="hidden-xs">
                                 <span
                                     [ngClass]="{ hidden: i > 0 && modelos[i].categoria == modelos [i - 1].categoria }"
                                     [innerHtml]="highlight(m, 'categoria')"
