--- a/ui/src/app/catalogo/modelos/listar-modelos.component.html
+++ b/ui/src/app/catalogo/modelos/listar-modelos.component.html
@@ -2,27 +2,22 @@
     <div>
         <h3>Selecione o modelo de {{ tipo }}</h3>
         <div style="margin-bottom: 10px;">
-            <input
-                #modelFilterInput
-                type="text"
-                class="form-control modelFilterInput"
-                id="filter"
-                name="filter"
-                autocomplete="off"
-                [(ngModel)]="filter"
-                (keyup)="onKey()"
-                placeholder="Buscar modelo..."
-            />
-            <label *ngFor="let casa of casas; let i = index"
-                >&nbsp;&nbsp;
-                <input
-                    *ngIf="casa"
-                    type="radio"
-                    name="casa"
-                    [checked]="casa == casaSelected"
-                    [value]="casa.sigla"
-                    (change)="onSelectedCasa(casa)"
-                />&nbsp;{{ casa.nome }}
+            <input #modelFilterInput
+                   type="text"
+                   class="form-control modelFilterInput"
+                   id="filter"
+                   name="filter"
+                   autocomplete="off"
+                   [(ngModel)]="filter"
+                   (keyup)="onKey()"
+                   placeholder="Buscar modelo..." />
+            <label *ngFor="let casa of casas; let i = index">&nbsp;&nbsp;
+                <input *ngIf="casa"
+                       type="radio"
+                       name="casa"
+                       [checked]="casa == casaSelected"
+                       [value]="casa.sigla"
+                       (change)="onSelectedCasa(casa)" />&nbsp;{{ casa.nome }}
             </label>
         </div>
         <div *ngIf="modelos">
@@ -33,20 +28,18 @@
                 </p>
             </div>
             <div *ngIf="modelos != null && modelos.length > 0">
-                <table
-                    class="table table-striped table-bordered table-hover unselectable"
-                    role="grid"
-                    style="width: 100%;"
-                >
+                <table class="table table-striped table-bordered table-hover unselectable"
+                       role="grid"
+                       style="width: 100%;">
                     <thead>
                         <tr role="row">
-                            <th style="width: 20%;" class="hidden-xs">Categoria</th>
+                            <th style="width: 20%;"
+                                class="hidden-xs">Categoria</th>
                             <th>Modelo</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr
-                            *ngFor="let m of modelos; let i = index"
+                        <tr *ngFor="let m of modelos; let i = index"
                             class="dms-row"
                             [ngClass]="{
                                 'table-hover': m['hover'],
@@ -54,36 +47,29 @@
                             }"
                             (mouseenter)="activateRow(m)"
                             (click)="selectModel(m)"
-                            (dblclick)="selectModel(m)"
-                        >
-                            <td style="vertical-align: top;" class="hidden-xs">
-                                <span
-                                    [ngClass]="{ hidden: i > 0 && modelos[i].categoria == modelos [i - 1].categoria }"
-                                    [innerHtml]="highlight(m, 'categoria')"
-                                ></span>
+                            (dblclick)="selectModel(m)">
+                            <td style="vertical-align: top;"
+                                class="hidden-xs">
+                                <span [ngClass]="{ hidden: i > 0 && modelos[i].categoria == modelos [i - 1].categoria }"
+                                      [innerHtml]="highlight(m, 'categoria')"></span>
                             </td>
                             <td>
-                                <div
-                                    style="font-weight: bold;"
-                                    [innerHtml]="highlight(m, 'titulo')"
-                                ></div>
-                                <div
-                                    [innerHtml]="highlight(m, 'indexacao')"
-                                ></div>
-                                <div
-                                    [innerHtml]="highlight(m, 'fundamentacao')"
-                                ></div>
-                                <span
-                                    class="casa"
-                                    [ngClass]="
+                                <div class="col-xs-12"
+                                     style="font-weight: bold;"
+                                     [innerHtml]="highlight(m, 'titulo')"></div>
+                                <div class="col-xs-12"
+                                     [innerHtml]="highlight(m, 'indexacao')"></div>
+                                <div class="col-xs-12"
+                                     [innerHtml]="highlight(m, 'fundamentacao')"></div>
+                                <span class="casa"
+                                      [ngClass]="
                                         'casa-' + m.metadata.CasaLegislativa
                                     "
-                                    title="{{
+                                      title="{{
                                         montaTituloCasa(
                                             m.metadata.CasaLegislativa
                                         )
-                                    }}"
-                                >
+                                    }}">
                                     {{ m.metadata.CasaLegislativa }}
                                 </span>
                             </td>
@@ -93,4 +79,4 @@
             </div>
         </div>
     </div>
- </div>
+</div>
