--- a/ui/projects/madoc-extras/src/lib/madoc-extras-alert/madoc-extras-alert.component.css
+++ b/ui/projects/madoc-extras/src/lib/madoc-extras-alert/madoc-extras-alert.component.css
@@ -1,11 +1,4 @@
-
-.fixed-alerts {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2000;
-  width: 100%;
-  padding: 5px;
-
+:host ::ng-deep .alert {
+    margin-bottom: 5px !important;
 }
 
