#113723 Documenta parâmetro do CSS customizado e melhor css de exemplo.

--- a/ui/src/assets/css/testecss.css
+++ b/ui/src/assets/css/testecss.css
@@ -1,3 +1,8 @@
-.teste {
-    color: #f00 !important;
+/*
+Exemplo de CSS customizado
+*/
+
+/* Alinha à esquerda o nome do modelo e o título do documento */
+#madoc-editor .app-madoc-title .panel-heading {
+    text-align: left;
 }
