--- a/ui/projects/madoc-extras/src/lib/madoc-extras-alert/madoc-extras-alert.component.css
+++ b/ui/projects/madoc-extras/src/lib/madoc-extras-alert/madoc-extras-alert.component.css
@@ -2,3 +2,12 @@
     margin-bottom: 5px !important;
 }
 
+.fixed-alerts {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2000;
+  width: 100%;
+  padding: 5px;
+}
+
