refs #162128 não exibir botao -incluir mais datas- quando multiplesValues for false

--- a/ui/projects/madoc-ui/src/lib/component/daterange/daterange.component.html
+++ b/ui/projects/madoc-ui/src/lib/component/daterange/daterange.component.html
@@ -48,11 +48,11 @@
         <div style="clear: left;"> </div>
     </div>
     <div class="linha">
-        <button id="addPeriod"
+        <button *ngIf="canAdd()"
+                id="addPeriod"
                 type="button"
                 class="btn btn-primary btn-sm"
-                (click)="add()"
-                [disabled]="!canAdd()">
+                (click)="add()">
             Incluir mais datas
         </button>
     </div>
