--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.css
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.css
@@ -25,3 +25,17 @@
 .row {
   margin-top: -6px !important;
 }
+.grid {
+  display: grid;
+  grid-template-columns: auto auto 1fr 1fr;
+  grid-auto-rows: 35px;
+}
+.grid > div {
+  padding: 0 4px;
+}
+
+.grid > div > label {
+  cursor: pointer;
+  font-weight: normal !important;
+  margin-bottom: 0 !important;
+}
