--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
@@ -25,6 +25,8 @@
         >Limpar</button>
       </div>
     </div>
+    <div class="row" style="margin-bottom: 10px; margin-top: 0 !important;">Filtre por faixa de dispositivos (ex. 1-3) ou palavras-chave.</div>
+    <div class="row"><label><input type="checkbox"> Selecionar Todos</label></div>
   </form>
   <br *ngIf="!disabled">
   <div
@@ -33,37 +35,32 @@
   >
     <div
       class="col-xs-12"
-      style="overflow-y: auto; height:100px;border: #ccc 1px solid;"
+      style="overflow-y: auto;border: #ccc 1px solid;min-height: 70px;max-height: 150px;"
     >
-      <div
-        style="display:flex;align-items:center; text-indent: 0; margin: 6px 0px 5px 5px;"
-        *ngFor="let dispositivo of getDispositivosWithFilter(); let i = index"
-      >
-        <span *ngIf="dispositivo != null">
-          <label
-            style="cursor: pointer"
-            [style.font-weight]="'normal'"
-            [attr.for]="dispositivo.id"
-          >
+      <div class="grid">
+        <ng-container *ngFor="let dispositivo of getDispositivosWithFilter(); let i = index">
+          <div>
             <input
-              [id]="dispositivo.id"
-              type="checkbox"
-              style="cursor: pointer"
-              [(ngModel)]="dispositivo.selected"
-              onselect="onSelected(dispositivo)"
-              [disabled]="disabled"
-            > &nbsp;
-            <strong>{{dispositivo.numeroIdentificador}}</strong>:
-            {{dispositivo.texto}}
-          </label>
-        </span>
+                [id]="dispositivo.numeroIdentificador"
+                type="checkbox"
+                style="cursor: pointer"
+                [(ngModel)]="dispositivo.selected"
+                onselect="onSelected(dispositivo)"
+                [disabled]="disabled"
+            >
+          </div>
+          <div><label [attr.for]="dispositivo.numeroIdentificador"><strong>{{dispositivo.numeroIdentificador}}</strong></label></div>
+          <div><label [attr.for]="dispositivo.numeroIdentificador">{{dispositivo.texto}}</label></div>
+          <div><label *ngIf="dispositivo.conteudo != null" [attr.for]="dispositivo.numeroIdentificador">{{dispositivo.conteudo}}</label>&nbsp;</div>
+        </ng-container>
       </div>
     </div>
   </div>
   <br *ngIf="!disabled">
   <div class="row">
     <div class="col-xs-12 pad0">
-      <label>Itens Destacados</label>
+      <label>Itens destacados:&nbsp;</label>
+      <span> Dispositivos 1 a 3 e 3 a 5 do veto 36/2018.</span>
     </div>
   </div>
   <div class="row">
