--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.css
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.css
@@ -27,11 +27,13 @@
 }
 .grid {
   display: grid;
-  grid-template-columns: auto auto 1fr 1fr;
-  grid-auto-rows: 35px;
+  grid-template-columns: auto auto auto auto;
 }
 .grid > div {
-  padding: 0 4px;
+  padding: 2px 4px;
+}
+.grid > div:nth-child(4n-3) {
+  padding-top: 0;
 }
 
 .grid > div > label {
