--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
@@ -4,11 +4,8 @@
     [formGroup]="form"
     *ngIf="!disabled"
   >
-    <div
-      class="row"
-      style="display:flex;align-items:center;"
-    >
-      <div style="margin-right: 5px">
+    <div class="row">
+      <div style="float: left; margin: 0 5px 3px 0">
         <input
           type="text"
           class="form-control"
@@ -16,7 +13,7 @@
           placeholder="Filtro..."
         >
       </div>
-      <div>
+      <div style="float: left; margin: 0 5px 3px 0">
         <button
           class="btn btn-default"
           type="button"
@@ -24,9 +21,14 @@
           [disabled]="disabled"
         >Limpar</button>
       </div>
+      <div style="float: left; margin: 0 5px 3px 0">
+        <button class="btn btn-default">Marcar todos</button>
+      </div>
+      <div style="float: left; margin: 0 0 3px 0">
+        <button class="btn btn-default">Desmarcar todos</button>
+      </div>
     </div>
-    <div class="row" style="margin-bottom: 10px; margin-top: 0 !important;">Filtre por faixa de dispositivos (ex. 1-3) ou palavras-chave.</div>
-    <div class="row"><label><input type="checkbox"> Selecionar Todos</label></div>
+    <div class="row" style="margin-bottom: 10px; clear: left;">Filtre por faixa de dispositivos (ex. 1-3) ou palavras-chave.</div>
   </form>
   <br *ngIf="!disabled">
   <div
@@ -35,7 +37,7 @@
   >
     <div
       class="col-xs-12"
-      style="overflow-y: auto;border: #ccc 1px solid;min-height: 70px;max-height: 150px;"
+      style="overflow-y: auto;border: #ccc 1px solid;min-height: 70px; max-height: 300px; padding: 0;"
     >
       <div class="grid">
         <ng-container *ngFor="let dispositivo of getDispositivosWithFilter(); let i = index">
@@ -51,16 +53,16 @@
           </div>
           <div><label [attr.for]="dispositivo.numeroIdentificador"><strong>{{dispositivo.numeroIdentificador}}</strong></label></div>
           <div><label [attr.for]="dispositivo.numeroIdentificador">{{dispositivo.texto}}</label></div>
-          <div><label *ngIf="dispositivo.conteudo != null" [attr.for]="dispositivo.numeroIdentificador">{{dispositivo.conteudo}}</label>&nbsp;</div>
+          <div><label *ngIf="dispositivo.conteudo != null" [attr.for]="dispositivo.numeroIdentificador">{{dispositivo.conteudo}}</label></div>
         </ng-container>
       </div>
     </div>
   </div>
   <br *ngIf="!disabled">
   <div class="row">
-    <div class="col-xs-12 pad0">
-      <label>Itens destacados:&nbsp;</label>
-      <span> Dispositivos 1 a 3 e 3 a 5 do veto 36/2018.</span>
+    <div class="col-xs-12 pad0" style="margin-bottom: 5px;">
+      <strong>Itens destacados:&nbsp;</strong>
+      Dispositivos 1 a 3 e 3 a 5 do veto 36/2018.
     </div>
   </div>
   <div class="row">
