--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
@@ -22,10 +22,13 @@
         >Limpar</button>
       </div>
       <div style="float: left; margin: 0 5px 3px 0">
-        <button class="btn btn-default">Marcar todos</button>
+        <button class="btn btn-default"
+          (click)="marcarTodosDispositivos(true);"
+          [disabled]="">Marcar todos</button>
       </div>
       <div style="float: left; margin: 0 0 3px 0">
-        <button class="btn btn-default">Desmarcar todos</button>
+        <button class="btn btn-default"
+          (click)="marcarTodosDispositivos(false);">Desmarcar todos</button>
       </div>
     </div>
     <div class="row" style="margin-bottom: 10px; clear: left;">Filtre por faixa de dispositivos (ex. 1-3) ou palavras-chave.</div>
@@ -62,7 +65,7 @@
   <div class="row">
     <div class="col-xs-12 pad0" style="margin-bottom: 5px;">
       <strong>Itens destacados:&nbsp;</strong>
-      Dispositivos 1 a 3 e 3 a 5 do veto 36/2018.
+      <!--<descritor-dispositivo [dispostivos]="getDispositivosSelecionados()" [anoVeto]="veto.ano" [numeroVeto]="veto.numero"></descritor-dispositivo>-->
     </div>
   </div>
   <div class="row">
