--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
@@ -65,7 +65,7 @@
   <div class="row">
     <div class="col-xs-12 pad0" style="margin-bottom: 5px;">
       <strong>Itens destacados:&nbsp;</strong>
-      <!--<descritor-dispositivo [dispostivos]="getDispositivosSelecionados()" [anoVeto]="veto.ano" [numeroVeto]="veto.numero"></descritor-dispositivo>-->
+      <descritor-dispositivo [dispostivos]="getDispositivosSelecionados()" [anoVeto]="veto.ano" [numeroVeto]="veto.numero"></descritor-dispositivo>
     </div>
   </div>
   <div class="row">
