refs #185456 feat: Removendo método não utilizado.

--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.html
@@ -23,8 +23,7 @@
       </div>
       <div style="float: left; margin: 0 5px 3px 0">
         <button class="btn btn-default"
-          (click)="marcarTodosDispositivos(true);"
-          [disabled]="">Marcar todos</button>
+          (click)="marcarTodosDispositivos(true);">Marcar todos</button>
       </div>
       <div style="float: left; margin: 0 0 3px 0">
         <button class="btn btn-default"
