--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.css
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.css
@@ -30,10 +30,11 @@
   grid-template-columns: auto auto auto auto;
 }
 .grid > div {
-  padding: 2px 4px;
+  padding: 1px 4px;
 }
 .grid > div:nth-child(4n-3) {
   padding-top: 0;
+  margin-top: 1px;
 }
 
 .grid > div > label {
