fix: Implementando tamanho mínimo para a última coluna

--- a/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.css
+++ b/ui/projects/madoc-ui/src/lib/component/veto/dispositivo-veto/dispositivo-veto.component.css
@@ -37,6 +37,10 @@
   margin-top: 1px;
 }
 
+.grid > div:nth-child(4n-0) {
+  min-width: 600px;
+}
+
 .grid > div > label {
   cursor: pointer;
   font-weight: normal !important;
